# unival

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  config.cmake.in  gen_cmake.py
.github/workflows/: build-and-test.yml  cleanup.yml  integration.yml
install/include/unival/: chain.h  unival.h
install/lib/cmake/unival/: unival-config.cmake  unival-targets-noconfig.cmake  unival-targets.cmake
source/: CMakeLists.txt
source/test/: CMakeLists.txt  main.test.cpp
source/test/integration/fetch_content/: CMakeLists.txt  main.c  main.cpp
source/test/integration/find_package/: CMakeLists.txt
source/test/integration/find_package/source/: CMakeLists.txt  main.cpp
source/test/unittests/: CMakeLists.txt  chain.test.cpp  input_buffer.test.cpp  iterator.test.cpp  parse.test.cpp  print.test.cpp  unival.test.cpp
source/unival/: CMakeLists.txt  chain.cpp  chain.h  input_buffer.cpp  input_buffer.h  iterator.cpp  iterator.h  parse.cpp  parse.h  print.cpp  print.h  read.h  unival.c  unival.cpp  unival.h
tools/: gen-cmake.py
